More work on the UI

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -92,6 +92,7 @@ h1.ast-title {
 	line-height: 60px;
 }
 p.ast-text {
+	padding: 0 0 10px 30px;
 	font-family: 'Arial', sans-serif;
 	font-size: 12px;
 	font-style: italic;
@@ -101,4 +102,13 @@ p.ast-text a, p.ast-text a:visited {
 }
 p.ast-text a:hover, p.ast-text a:visited:hover {
 	color: #cc0000;
+}
+td.rating {
+	font-size: 28px;
+	text-align: center;
+	font-family: 'Lato', 'Arial', sans-serif;
+	font-style: italic;
+}
+table.jtable {
+	padding-bottom: 30px;
 }
