More working on the UI - starting the checkboxes now too

--- a/app/assets/stylesheets/blitzer/jquery-ui-1.8.19.custom.css.erb
+++ b/app/assets/stylesheets/blitzer/jquery-ui-1.8.19.custom.css.erb
@@ -63,7 +63,7 @@
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d8dcdf; background: #eeeeee url(<%= asset_path 'blitzer/images/ui-bg_highlight-hard_100_eeeeee_1x100.png' %>) 50% 50% repeat-x; font-weight: bold; color: red; font-style: italic; }
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d8dcdf; background: #eeeeee url(<%= asset_path 'blitzer/images/ui-bg_highlight-hard_100_eeeeee_1x100.png' %>) 50% 50% repeat-x; font-weight: bold; color: #c00; font-style: italic; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #004276; text-decoration: none; }
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #cdd5da; background: #f6f6f6 url(<%= asset_path 'blitzer/images/ui-bg_highlight-hard_100_f6f6f6_1x100.png' %>) 50% 50% repeat-x; font-weight: bold; color: #111111; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #111111; text-decoration: none; }
