--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -103,6 +103,9 @@ p.ast-text a, p.ast-text a:visited {
 p.ast-text a:hover, p.ast-text a:visited:hover {
 	color: #cc0000;
 }
+th.rating {
+	text-align: center;
+}
 td.rating {
 	font-size: 28px;
 	text-align: center;
@@ -111,4 +114,15 @@ td.rating {
 }
 table.jtable {
 	padding-bottom: 30px;
+	width: 99%;
+}
+label.checker {
+	padding-left: 8px;
+	text-align: center;
+}
+th.checker {
+	text-align: center;
+}
+td.checker {
+	text-align: center;
 }
