--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,37 +37,37 @@
 					<li><a href="#tabs-4"><%=t 'deployment'%></a></li>
 				</ul>
 				<div id="tabs-1">
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'sm-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'sm-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
-							<tr><td><%=t 'sm1'%></td><td>Yo</td><td rowspan='8' class="rating">0</td></tr>
-							<tr><td><%=t 'sm2'%></td><td></td></tr>
-							<tr><td><%=t 'sm3'%></td><td></td></tr>
-							<tr><td><%=t 'sm4'%></td><td></td></tr>
-							<tr><td><%=t 'sm5'%></td><td></td></tr>
-							<tr><td><%=t 'sm6'%></td><td></td></tr>
-							<tr><td><%=t 'sm7'%></td><td></td></tr>
-							<tr><td><%=t 'sm8'%></td><td></td></tr>
+							<tr><td><%=t 'sm1'%></td><td class="checker"><input type="checkbox" id="sm1-check" /><label class="checker" for="sm1-check">Yes</label></td><td rowspan='8' class="rating">0</td></tr>
+							<tr><td><%=t 'sm2'%></td><td class="checker"><input type="checkbox" id="sm2-check" /><label class="checker" for="sm2-check">Yes</label></td></tr>
+							<tr><td><%=t 'sm3'%></td><td class="checker"><input type="checkbox" id="sm3-check" /><label class="checker" for="sm3-check">Yes</label></td></tr>
+							<tr><td><%=t 'sm4'%></td><td class="checker"><input type="checkbox" id="sm4-check" /><label class="checker" for="sm4-check">Yes</label></td></tr>
+							<tr><td><%=t 'sm5'%></td><td class="checker"><input type="checkbox" id="sm5-check" /><label class="checker" for="sm5-check">Yes</label></td></tr>
+							<tr><td><%=t 'sm6'%></td><td class="checker"><input type="checkbox" id="sm6-check" /><label class="checker" for="sm6-check">Yes</label></td></tr>
+							<tr><td><%=t 'sm7'%></td><td class="checker"><input type="checkbox" id="sm7-check" /><label class="checker" for="sm7-check">Yes</label></td></tr>
+							<tr><td><%=t 'sm8'%></td><td class="checker"><input type="checkbox" id="sm8-check" /><label class="checker" for="sm8-check">Yes</label></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'pc-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'pc-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
-							<tr><td><%=t 'pc1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
-							<tr><td><%=t 'pc2'%></td><td></td></tr>
-							<tr><td><%=t 'pc3'%></td><td></td></tr>
-							<tr><td><%=t 'pc4'%></td><td></td></tr>
-							<tr><td><%=t 'pc5'%></td><td></td></tr>
-							<tr><td><%=t 'pc6'%></td><td></td></tr>
+							<tr><td><%=t 'pc1'%></td><td class="checker"><input type="checkbox" id="pc1-check" /><label class="checker" for="pc1-check">Yes</label></td><td rowspan='6' class="rating">0</td></tr>
+							<tr><td><%=t 'pc2'%></td><td class="checker"><input type="checkbox" id="pc2-check" /><label class="checker" for="pc2-check">Yes</label></td></tr>
+							<tr><td><%=t 'pc3'%></td><td class="checker"><input type="checkbox" id="pc3-check" /><label class="checker" for="pc3-check">Yes</label></td></tr>
+							<tr><td><%=t 'pc4'%></td><td class="checker"><input type="checkbox" id="pc4-check" /><label class="checker" for="pc4-check">Yes</label></td></tr>
+							<tr><td><%=t 'pc5'%></td><td class="checker"><input type="checkbox" id="pc5-check" /><label class="checker" for="pc5-check">Yes</label></td></tr>
+							<tr><td><%=t 'pc6'%></td><td class="checker"><input type="checkbox" id="pc6-check" /><label class="checker" for="pc6-check">Yes</label></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'eg-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'eg-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'eg1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
@@ -80,9 +80,9 @@
 					</table></p>
 				</div>
 				<div id="tabs-2">
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'ta-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'ta-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'ta1'%></td><td>Yo</td><td rowspan='7' class="rating">0</td></tr>
@@ -94,9 +94,9 @@
 							<tr><td><%=t 'ta7'%></td><td></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'sr-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'sr-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'sr1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
@@ -107,9 +107,9 @@
 							<tr><td><%=t 'sr6'%></td><td></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'sa-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'sa-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'sa1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
@@ -122,9 +122,9 @@
 					</table></p>
 				</div>
 				<div id="tabs-3">
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'dr-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'dr-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'dr1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
@@ -135,9 +135,9 @@
 							<tr><td><%=t 'dr6'%></td><td></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'cr-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'cr-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'cr1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
@@ -148,9 +148,9 @@
 							<tr><td><%=t 'cr6'%></td><td></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'st-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'st-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'st1'%></td><td>Yo</td><td rowspan='7' class="rating">0</td></tr>
@@ -164,9 +164,9 @@
 					</table></p>
 				</div>
 				<div id="tabs-4">
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'vm-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'vm-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'vm1'%></td><td>Yo</td><td rowspan='7' class="rating">0</td></tr>
@@ -178,9 +178,9 @@
 							<tr><td><%=t 'vm7'%></td><td></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'eh-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'eh-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'eh1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
@@ -191,9 +191,9 @@
 							<tr><td><%=t 'eh6'%></td><td></td></tr>
 						</tbody>
 					</table></p>
-					<p><table class="jtable" style="width: 99%;"><caption><%=t 'oe-title'%></caption>
+					<p><table class="jtable"><caption><%=t 'oe-title'%></caption>
 						<thead>
-							<tr><th style="width: 80%;">Question</th><th>Response</th><th>Rating</th></tr>
+							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
 							<tr><td><%=t 'oe1'%></td><td>Yo</td><td rowspan='6' class="rating">0</td></tr>
