Client side logic for rating now works

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,39 @@
 		$('input[id^="sm"]').change(function() {
 			Crunch("sm",4,7,8);
 		});
+		$('input[id^="pc"]').change(function() {
+			Crunch("pc",3,5,6);
+		});
+		$('input[id^="eg"]').change(function() {
+			Crunch("eg",3,5,6);
+		});
+		$('input[id^="ta"]').change(function() {
+			Crunch("ta",3,6,7);
+		});
+		$('input[id^="sr"]').change(function() {
+			Crunch("sr",3,5,6);
+		});
+		$('input[id^="sa"]').change(function() {
+			Crunch("sa",3,5,6);
+		});
+		$('input[id^="dr"]').change(function() {
+			Crunch("dr",3,5,6);
+		});
+		$('input[id^="cr"]').change(function() {
+			Crunch("cr",3,5,6);
+		});
+		$('input[id^="st"]').change(function() {
+			Crunch("st",4,6,7);
+		});
+		$('input[id^="vm"]').change(function() {
+			Crunch("vm",4,6,7);
+		});
+		$('input[id^="eh"]').change(function() {
+			Crunch("eh",3,5,6);
+		});
+		$('input[id^="oe"]').change(function() {
+			Crunch("oe",3,5,6);
+		});
 	});
 </script>
 
@@ -157,7 +190,7 @@
 							<tr><th style="width: 80%;">Question</th><th class="checker">Response</th><th class="rating">Rating</th></tr>
 						</thead>
 						<tbody>
-							<tr><td><%=t 'st1'%></td><td class="checker"><input type="checkbox" id="st1-check" /><label class="checker" for="st1-check">Yes</label></td><td rowspan='7' class="rating" id="st-title">0</td></tr>
+							<tr><td><%=t 'st1'%></td><td class="checker"><input type="checkbox" id="st1-check" /><label class="checker" for="st1-check">Yes</label></td><td rowspan='7' class="rating" id="st-rating">0</td></tr>
 							<tr><td><%=t 'st2'%></td><td class="checker"><input type="checkbox" id="st2-check" /><label class="checker" for="st2-check">Yes</label></td></tr>
 							<tr><td><%=t 'st3'%></td><td class="checker"><input type="checkbox" id="st3-check" /><label class="checker" for="st3-check">Yes</label></td></tr>
 							<tr><td><%=t 'st4'%></td><td class="checker"><input type="checkbox" id="st4-check" /><label class="checker" for="st4-check">Yes</label></td></tr>
